--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,6 @@ h1, h2, h3, h4, h5, h6 {
   min-height: 100%;
   overflow: hidden;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: #222;
@@ -85,11 +84,31 @@ h1, h2, h3, h4, h5, h6 {
   border: 2px solid white;
   border-radius: 15px;
   padding: 10px;
-  margin-bottom: 20px;
+  margin-right: 20px;
   width: 400px;
-  height: 300px;
+  height: 400px;
   display: flex;
   flex-direction: column;
+}
+.block .error {
+  width: 50%;
+  height: 12px;
+  background-color: rgba(255, 0, 0, 0.7);
+  font-size: 10px;
+  text-transform: uppercase;
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  border: 1px solid black;
+  display: none;
+}
+.block .error::before {
+  content: "ERROR";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .block h2 {
   text-align: center;
