--- a/sours/style.scss
+++ b/sours/style.scss
@@ -3,16 +3,35 @@
     min-height: 100%;
     overflow: hidden;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #222;
 }
 .block {
+    .error{
+        width: 50%;
+        height: 12px;
+        background-color: rgba($color: red, $alpha: 0.7);
+        font-size: 10px;
+        text-transform: uppercase;
+        position: relative;
+        overflow: hidden;
+        margin-bottom: 10px;
+        margin-left: 10px;
+        border: 1px solid black;
+        display: none;
+    }
+    .error::before{
+        content: 'ERROR';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
     border: 2px solid white;
     border-radius: 15px;
     padding: 10px;
-    margin-bottom: 20px;
+    margin-right: 20px;
     h2{
         text-align: center;
         margin-bottom: 10px;
@@ -20,7 +39,7 @@
         color: white;
     }
     width: 400px;
-    height: 300px;
+    height: 400px;
     display: flex;
     flex-direction: column;
    .input{
